arm: Explicitly specify other float types for _Generic overloading [PR107515]

This patch adds explicit references to other float types
to __ARM_mve_typeid in arm_mve.h.  Resolves PR 107515:
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=107515

gcc/ChangeLog:
	PR target/107515
	* config/arm/arm_mve.h (__ARM_mve_typeid): Add float types.

(cherry picked from commit 2fefb8931d566cc8a4cbba81601972b0d2002f95)